<?xml version="1.0"?>
<package format="3">
  <name>factory_sim_gazebo_world</name>
  <version>1.0.5</version>
  <description>
    A package made in order to use in logistics and automation application
    It uses "AWS RoboMaker" package for the ready-to-use models and "HRWROS" world
  </description>
  <license>MIT-0</license>
  <author email="yoab.learn.25@gmail.com">YoAB25</author>
  <maintainer email="yoab.learn.25@gmail.com">YoAB25</maintainer>

  <buildtool_depend>ament_cmake</buildtool_depend>
  
  <depend>gazebo_ros</depend>
  <exec_depend>gazebo</exec_depend>
  <exec_depend>gazebo_plugins</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
    <gazebo_ros plugin_path="${prefix}/lib" gazebo_media_path="${prefix}" gazebo_model_path="${prefix}/models"/>
  </export>
</package>
